--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="./main.css">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
         <title>Evan DePosit's Portfolio</title>
@@ -27,24 +28,33 @@
                 </ul>
             </div>
         </nav>
-    <!--
-        <div class="cotainer">
-                <h1 class="text-center">About Me</h1>
-                <hr class="my-4">
-        </div>
-    -->
         <div class="container">
-            <div class="row top-buffer">
-                <div class="col-md-3">
-                    <img src="family.jpg" class="rounded img-fluid" alt="Responsive image">
+            <div class="row">
+                <div class="col-md-2">
                 </div>
-                <div class="col-md-9">
-                <h1 class="text-center">About Me</h1>
-                <hr class="my-4">
-                I am a Studying Computer science at Portland State University. 
+                <div class="col-md-8">
+                    <div class="row">    
+
+                        <div class="col-md-6">
+                            <img src="family.jpg" class="rounded img-fluid" alt="Responsive image">
+                        </div>
+                        <div class="col-md-6">
+                        <h1 class="text-center">About Me</h1>
+                        <hr class="my-4">
+                        <p class="lead">
+                        I studied Ecology and Evolution at the University of Oregon. After working for six years 
+                        as a High School Science teacher in the Portland metropolitan area, I decided I wanted to
+                        persue a career in software devolopment. Currently, I am studying computer science in the
+                        CS Master's program at Portland State University. 
+                        </p>
+                    </div>
                 </div>
+                <div class="col-md-2">
+                </div>
+
+                    </div>
+               
             </div>
         </div>
-            
     </body>
 <html>
