changed cover picture

--- a/aboutme.html
+++ b/aboutme.html
@@ -42,10 +42,12 @@
                         <h1 class="text-center">About Me</h1>
                         <hr class="my-4">
                         <p class="lead">
-                        I studied Ecology and Evolution at the University of Oregon. After working for six years 
-                        as a High School Science teacher in the Portland metropolitan area, I decided I wanted to
+                        I studied Biology at the University of Oregon. After working for six years 
+                        as a High School Science teacher in the Portland metropolitan area, I decided to
                         persue a career in software devolopment. Currently, I am studying computer science in the
-                        CS Master's program at Portland State University. 
+                        CS Master's program at Portland State University. In my free time, I enjoy playing 
+                        finger-style, folk and country-blues acoustic guitar.
+
                         </p>
                     </div>
                 </div>
