--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
         </nav>
 
 
-        <div class="jumbotron jumbotron-fluid">
+        <!-- <div class="jumbotron jumbotron-fluid"> -->
+        <div class="container container-fluid">
             <div class="container">
-                <h1 class="text-center display-1">Evan DePosit </h1>
+                <h1 class="text-center display-4">Evan DePosit </h1>
                 <hr class="my-4">
+                <!--
                 <h1 class="text-center display-4"><small class="text-muted">Portfolio</small></h1>
+                -->
             <div>
         </div>
             <div class="container">
-                <img src="grass.jpg" class="img-fluid" alt="responsive image">
+                <img src="casey-horner-1584668-unsplash.jpg" id="cover" class="img-fluid" alt="responsive image">
             <div>
     </body>
 <html>
