added contact page

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,6 @@
         <title>Evan DePosit's Portfolio</title>
     </head>
     <body>
-
         <nav class="navbar navbar-dark sticky-top bg-dark">
             <div class="navbar-expand">
                 <ul class="navbar-nav mr-auto">
@@ -25,9 +24,13 @@
                     <li class="nav-item activ">
                         <a class="nav-link" href="https://github.com/ejdeposit/">GitHub</a>
                     </li>
+                    <li class="nav-item activ">
+                        <a class="nav-link" href="http://web.cecs.pdx.edu/~edeposit/contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
         </nav>
+
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
