--- a/contact.html
+++ b/contact.html
@@ -31,19 +31,23 @@
             </div>
         </nav>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4">
+                    <h1 class="text-center">Contact</h1>
+                    <hr class="my-4">
+                    <p class="lead text-center">
+                    edeposit@pdx.edu
+                    </p>
+                </div>
+                <div class="col-md-4">
+                </div>
 
-        <!-- <div class="jumbotron jumbotron-fluid"> -->
-        <div class="container container-fluid">
-            <div class="container">
-                <h1 class="text-center display-4">Evan DePosit </h1>
-                <hr class="my-4">
-                <!--
-                <h1 class="text-center display-4"><small class="text-muted">Portfolio</small></h1>
-                -->
-            <div>
+                    </div>
+               
+            </div>
         </div>
-            <div class="container">
-                <img src="casey-horner-1584668-unsplash.jpg" id="cover" class="img-fluid" alt="responsive image">
-            <div>
     </body>
 <html>
