changed contact email to image to avoid spam

--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,8 @@
                 <div class="col-md-4">
                     <h1 class="text-center">Contact</h1>
                     <hr class="my-4">
-                    <p class="lead text-center">
-                    edeposit@pdx.edu
-                    </p>
-
+                    
+                    <img src="email_address_img.jpg" class="img-fluid" alt="responsive image">
                 </div>
                 <div class="col-md-4">
                 </div>
