--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="https://github.com/ejdeposit/">GitHub</a>
                     </li>
                     <li class="nav-item activ">
-                        <a class="nav-link" href="https://github.com/ejdeposit/contact.html">Contact</a>
+                        <a class="nav-link" href="http://web.cecs.pdx.edu/~edeposit/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
